// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisablePopup component tests snapshot testing for no process-management addon and only service URL 1`] = `
<Tooltip
  content="Management add-on capability not enabled. Contact your administrator to set up"
  distance={-15}
>
  <Checkbox
    className=""
    id="test"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</Tooltip>
`;

exports[`DisablePopup component tests snapshot testing for no service URL and no process-management addon 1`] = `
<Tooltip
  content="Management add-on capability not enabled & missing the kogito.service.url property. Contact your administrator to set up."
  distance={-15}
>
  <Checkbox
    className=""
    id="test"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</Tooltip>
`;

exports[`DisablePopup component tests snapshot testing for no service URL and only process-management addon 1`] = `
<Tooltip
  content="This Kogito runtime is missing the kogito.service.url property. Contact your administrator to set up."
  distance={-15}
>
  <Checkbox
    className=""
    id="test"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</Tooltip>
`;

exports[`DisablePopup component tests snapshot testing for service URL and process-management addon available 1`] = `
<Tooltip
  content=""
  distance={-15}
>
  <Checkbox
    className=""
    id="test"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    onChange={[Function]}
  />
</Tooltip>
`;
